# MOI_Robot_Winter

./: README  README~  a.sh  autoLoad.sh  cmd.sh  install.sh  moi_gui  readme.txt  server.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: robot_winter.pc  winter_bringup.pc  winter_description.pc  winter_keyboard.pc  winter_simulation.pc  winter_voice.pc
devel/lib/winter_bringup/: base_control  fake_odom_publisher
devel/lib/winter_simulation/: fake_odo_publiser
src/clear_costmap_recovery_gao/: CMakeLists.txt  CMakeLists.txt~  README  README~  ccr_plugin_gao.xml  package.xml  package.xml~
src/clear_costmap_recovery_gao/src/: clear_costmap_recovery_gao.cpp
src/lslidar_n301-master/: README.md
src/lslidar_n301-master/lslidar_n301_decoder/: CMakeLists.txt
src/lslidar_n301-master/lslidar_n301_driver/: CMakeLists.txt
src/lslidar_n301-master/lslidar_n301_driver/include/lslidar_n301_driver/: README  lslidar_n301_driver.h
src/lslidar_n301-master/lslidar_n301_driver/launch/: lslidar_n301_driver.launch
src/lslidar_n301-master/lslidar_n301_driver/src/: lslidar_n301_driver.cc  lslidar_n301_driver_node.cc
src/robot_winter/: CMakeLists.txt  package.xml
src/robot_winter/rviz/: winter_demo.rviz
src/robot_winter/urdf/: winter.urdf.xacro
src/winter_base_local_planner/: CMakeLists.txt  CMakeLists.txt~  blp_plugin.xml  mblp_plugin.xml  package.xml  package.xml~
src/winter_base_local_planner/cfg/: BaseLocalPlanner.cfg
src/winter_base_local_planner/src/: goal_functions.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp
src/winter_bringup/: CMakeLists.txt  CMakeLists.txt~  winter_teleop_incremental  winter_teleop_key
src/winter_bringup/launch/: incremental_teleop.launch  winter_bingup.launch  winter_bingup_encoder.launch  winter_bingup_encoder.launch~  winter_bingup_usst.launch~  winter_minimal.sh
src/winter_bringup/msg/: Infrared.msg
src/winter_bringup/param/: winter_bringup_usst.yaml
src/winter_bringup/src/: base_control.cpp  base_control_3.cpp  base_control_usst.cpp  base_control_withACC.cpp  fake_odom_publisher.cpp  motorControl.py  mserial.py
src/winter_camera/: CMakeLists.txt  README  README~  package.xml
src/winter_camera/launch/: apriltags.launch~  ar_track_alvar.launch~  realsense.launch  realsense.launch~
src/winter_description/: CMakeLists.txt  cmd_test  package.xml
src/winter_description/config/: controller.yaml  controller.yaml~  urdf.rviz
src/winter_description/launch/: view_winter_gazebo.launch  view_winter_gazebo.launch~  view_winter_gazebo_ros_control.launch  view_winter_gazebo_ros_control.launch~  winter_demo.launch
src/winter_description/urdf/: moi_robot.urdf  winter.urdf (复件).xacro~  winter_gazebo.urdf.xacro  winter_gazebo.urdf.xacro~  winter_gazebo.xacro  winter_gazebo_ros_control.xacro  winter_gazebo_ros_control.xacro~
src/winter_description/worlds/: easy_room.world  easy_room.world~  hard_room.world  hard_room.world~  middle_room.world  room.world~  room2.world
src/winter_elevator_process/: CMakeLists.txt  package.xml
src/winter_elevator_process/src/: .goutputstream-2S0GCZ  elevetor_laserCheck.py  in.py  mapchanget.py  move_base_square.py  t.py
src/winter_globalplanner/: CMakeLists.txt~  package.xml  package.xml~
src/winter_globalplanner/src/: GlobalPlanner.cpp
src/winter_gmapping/: CMakeLists.txt  README  package.xml
src/winter_keyboard/: CMakeLists.txt  README~  package.xml
src/winter_keyboard/src/: joy.launch  joy.launch~  joycontrol.py  joystick.py  ke.py  telecopStopA.py  telecop_direct.py  telecop_direct.py~  telecop_gazebo.py  telecop_gazebo.py~  telecop_withACC.py  telecop_withACC.py~  turtlebot_telecop.py  two_wheels_telecop_withACC.py
src/winter_laser/: CMakeLists.txt  README  README~  package.xml
src/winter_laser/launch/: laser04lx.launch  moi_laser_lslidar_n301.launch  moi_laser_lslidar_n301.launch~
src/winter_map_server/: CMakeLists (复件).txt  CMakeLists.txt~  README  package.xml
src/winter_map_server/launch/: winter_map_server.launch  winter_map_server.launch~
src/winter_map_server/msg/: Num.msg
src/winter_map_server/scripts/: map.pgm
src/winter_map_server/src/: main.cpp
src/winter_move_base/: CMakeLists.txt  CMakeLists.txt~  README  README~  package.xml  package.xml~
src/winter_move_base/cfg/: MoveBase.cfg
src/winter_move_base/include/winter_move_base/: winter_move_base.h  winter_move_base.h~
src/winter_move_base/src/: winter_move_base.cpp  winter_move_base2.0.cpp  winter_move_base_node.cpp
src/winter_navigation/: CMakeLists.txt  package.xml
src/winter_people/: CMakeLists.txt  package.xml
src/winter_simulation/: CMakeLists.txt  CMakeLists.txt~  README  README~  launch文件说明.wps  机器人仿真说明书.wps
src/winter_slam_node/: README  slam_gmapping  slam_gmapping_replay
src/winter_socket/: CMakeLists.txt  README  package.xml
src/winter_voice/: CMakeLists.txt  README  README~  readme~
src/winter_webserver/: CMakeLists.txt  base_control.html  dhttpd.sh  index.html  mainpage.dox  mbutton.css  mgui.html  package.xml  pi.html~  pi_remote2.html~  remoteControl.html  test_map.html  test_map.html~
src/yun_global_planner/: CMakeLists.txt  package.xml  yun_global_planner_plugin.xml
(+430 files in other folders)
