<?xml version="1.0"?>
<package>
  <name>winter_move_base</name>
  <version>0.0.0</version>
  <description>The winter_move_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jobs@todo.todo">jobs</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/winter_move_base</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <build_depend>base_local_planner</build_depend>
    <build_depend>clear_costmap_recovery</build_depend>
    <build_depend>navfn</build_depend>
    <build_depend>rotate_recovery</build_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>clear_costmap_recovery</run_depend>
    <run_depend>navfn</run_depend>
    <run_depend>rotate_recovery</run_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
